--- a/main.ipynb
+++ b/main.ipynb
@@ -1407,7 +1407,7 @@
     }
    ],
    "source": [
-    "print(\"Number of each race:\\n\", race_count) \n",
+    "print(\"Number of each RACES:\\n\", race_count) \n",
     "print(\" \")\n",
     "print(\"Average age of men:\", average_age_men)\n",
     "print(f\"Percentage with Bachelors degrees: {percentage_bachelors}%\")\n",
